As a user I want to see a list of my transactions [Delivers #175529670]
